# visionaray

./: CMakeLists.txt
cmake/modules/: VisionarayCompileFailureTest.cmake
include/visionaray/: spectrum.h
include/visionaray/math/detail/: math.h
include/visionaray/math/simd/: trans.h
src/: CMakeLists.txt
src/common/: timer.h
src/examples/: CMakeLists.txt
src/examples/quadex/: CMakeLists.txt  basic_quad.h  main.cpp  mt_bl_uv.inl  pluecker.inl  project2d.inl  quad.h  snex.cpp  snex.cu  snex.h  uv.inl
src/examples/snex/: CMakeLists.txt  basic_quad.h  main.cpp  mt_bl_uv.inl  pluecker.inl  project2d.inl  snex.cpp  snex.h  uv.inl
src/fpstest/: CMakeLists.txt  fpstest.cpp  save_png.h  test_model.cpp  test_model.h
src/viewer/: CMakeLists.txt  precompiled.h  viewer.cpp
variant-testing/: config.py  test.py  variants.py
